Fix 545px section overflow on mobile across all pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -166,6 +166,7 @@
     font-family: 'Nicholas', serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
   }
 
   button:not(:disabled),
